# rust-sourcebundler

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
example/: Cargo.toml  build.rs
example/src/: lib.rs  macros.rs
src/: lib.rs
