[package]
name = "rustsourcebundler"
version = "0.1.0"
authors = ["Luma <world@luma.email>"]
description = "Bundle the source code of a rust cargo crate in a single source file"
license = "MIT"
homepage = "https://github.com/LumaKernel/rust-sourcebundler"
repository = "https://github.com/LumaKernel/rust-sourcebundler.git"
edition = "2018"

[dependencies]
regex = "1.5.6"
